# youtube_uploader

./: README.md  pyproject.toml
youtube_uploader/: main.py
youtube_uploader/utils/: google_photos.py  youtube.py
